[project]
name = "videojitter"
version = "0"
dependencies = [
    "altair",
    "ffmpeg-python",
    "numpy",
    "pandas",
    "scipy",
    "si-prefix",
    "soundfile",
]

[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[tool.pip-tools]
generate-hashes = true
strip-extras = true

[tool.black]
preview = true  # For long string line breaks

[tool.pylint.main]
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "fixme",
    "too-many-arguments",
    "too-many-locals",
    "too-few-public-methods",
]
